build/production/http/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: device-api-http-service
  namespace: production
  labels:
    app: device-api-http
spec:
  selector:
    app: device-api-http
  type: ClusterIP
  ports:
    - name: node
      port: 80
      targetPort: 3000
