build/production/http/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/backend-protocol: "http"
    nginx.ingress.kubernetes.io/enable-cors: "false"
  name: device-api-http-ingress
  namespace: production
  labels:
    app: device-api-http
spec:
  rules:
    - host: device-api.rfcx.org
      http:
        paths:
          - backend:
              serviceName: device-api-http-service
              servicePort: 80
